@@ -1,17 +1,17 @@
 /**
  * Copyright (C) 2011,2012 Gordon Fraser, Andrea Arcuri and EvoSuite
  * contributors
- *
+ * 
  * This file is part of EvoSuite.
- *
+ * 
  * EvoSuite is free software: you can redistribute it and/or modify it under the
  * terms of the GNU Public License as published by the Free Software Foundation,
  * either version 3 of the License, or (at your option) any later version.
- *
+ * 
  * EvoSuite is distributed in the hope that it will be useful, but WITHOUT ANY
  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  * A PARTICULAR PURPOSE. See the GNU Public License for more details.
- *
+ * 
  * You should have received a copy of the GNU Public License along with
  * EvoSuite. If not, see <http://www.gnu.org/licenses/>.
  */
@@ -19,14 +19,12 @@ package org.evosuite.graphs.cfg;
 
 import java.util.Comparator;
 
-import org.evosuite.graphs.cfg.BytecodeInstruction;
-
 /**
  * Orders CFGVertices according to their id
- *
- * This is mainly used to put BytecodeInstructions into a PriorityQueue
- * in ControlFlowGraph.getMaximalInitialDistance()
- *
+ * 
+ * This is mainly used to put BytecodeInstructions into a PriorityQueue in
+ * ControlFlowGraph.getMaximalInitialDistance()
+ * 
  * @author Gordon Fraser
  */
 public class BytecodeInstructionIdComparator implements Comparator<BytecodeInstruction> {
@@ -35,6 +33,6 @@ public class BytecodeInstructionIdComparator implements Comparator<BytecodeInstr
 	@Override
 	public int compare(BytecodeInstruction arg0, BytecodeInstruction arg1) {
 
-		return new Integer(arg0.getInstructionId()).compareTo(arg1.getInstructionId());
+		return Integer.valueOf(arg0.getInstructionId()).compareTo(arg1.getInstructionId());
 	}
 }
